--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ p1 {
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 h2 {
@@ -109,9 +109,10 @@ a:active {
   color: #f2f2f2;
   text-align: center;
   padding: 15px;
+  margin: 5px;
   text-decoration: none;
-  font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
+  border-radius: 5px;
 }
 
 .videoWrapper {
