--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,19 +245,9 @@ section.hero {
   width: 30%;
 }
 
-.columnleft {
+.columnthird {
   float: left;
-  width: 29%;
-}
-
-.columnmiddle {
-  float: center;
-  width: 29%;
-}
-
-.cloumnright {
-  float: right;
-  width: 29%;
+  width: 33%;
 }
 
 @media screen and (max-width: 800px) {
