--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,19 +235,10 @@ section.hero {
   background-color: #f1f1f1;
 }
 
-.leftcolumn {   
-  float: left;
-  width: 60%;
-}
-
-.rightcolumn {
-  float: right;
-  width: 30%;
-}
-
 .columnthird {
   float: left;
-  width: 33%;
+  width: 32%;
+  padding: 5px
 }
 
 @media screen and (max-width: 800px) {
