--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,16 @@ section.hero {
   background-color: #f1f1f1;
 }
 
+.leftcolumn {
+  float: left;
+  width: 60%;
+}
+
+.rightcolumn {
+  float: right;
+  width: 30%;
+}
+
 .columnthird {
   float: left;
   width: 32%;
